--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
+    "zerar-banco": "node scripts/zerar_banco.js",
     "dev": "cross-env NODE_ENV=development tsx watch server/_core/index.ts",
     "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
@@ -58,8 +59,11 @@
     "drizzle-orm": "^0.44.5",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
+    "ioredis": "^5.8.2",
+    "isomorphic-dompurify": "^2.32.0",
     "jose": "6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
@@ -72,6 +76,7 @@
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
+    "redis": "^5.10.0",
     "sonner": "^2.0.7",
     "superjson": "^1.13.3",
     "tailwind-merge": "^3.3.1",
@@ -86,6 +91,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "4.17.21",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.0",
     "@types/react": "^19.1.16",
